# masseffect-vita

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
companion/: main.cpp
data/: readme-saves.txt
data/everything_unlocked_start/var/: 0_tutorials.sb  career_0.sb  cp_0_01_snow_planet_checkpoint_01.sb  cp_0_01_snow_planet_checkpoint_02.sb  cp_0_01_snow_planet_checkpoint_02_end.sb  filesystem.sb  settings.sb
data/everything_unlocked_start/var1/: last_version.txt
lib/FalsoJNI/: FalsoJNI.c  FalsoJNI.h  FalsoJNI_Impl.h  FalsoJNI_ImplBridge.c  FalsoJNI_ImplBridge.h  FalsoJNI_ImplSample.h  FalsoJNI_Logger.c  FalsoJNI_Logger.h
lib/so_util/: so_util.c
livearea/: template.xml
loader/: config.h  default_dynlib.c  falsojni_impl.c  main.c  main.h  patch.c
loader/android/: EAAudioCore.c  EAAudioCore.h  java.io.InputStream.c  java.io.InputStream.h
loader/patch/: aim_sensitivity.c  cheats.c  deserialization_bug.c  info_menu.c  kill_network.c  output_streams.c
loader/reimpl/: controls.c  controls.h  ctype_patch.c  env.c  env.h  io.c  io.h  log.c  log.h  mem.c  mem.h  pthr.c  pthr.h  sys.c  sys.h
loader/utils/: dialog.c  dialog.h  glutil.c  glutil.h  logger.c  logger.h  settings.c  settings.h  utils.c  utils.h
shaders/: compile.py
